--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
 </head>
 <body>
 
-  <!-- Write your HTML in this file -->
+<h3>Top 5 Favorite Foods</h3>
+<ol>
+  <li>Grilled Cheese
+  <li>Sushi
+  <li>Cheese and crackers
+  <li>Cheese soup
+  <li>Nacho Cheese French Fries
+</ol>
 
 </body>
 </html>
