Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h3>Top 5 Favorite Foods</h3>
 <ul>
-  <li>Grilled Cheese
+  <li>2 slices of bread
   <li>Sushi
   <li>Cheese and crackers
   <li>Cheese soup
