--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <h3>Top 5 Favorite Foods</h3>
 <ul>
   <li>2 slices of bread
-  <li>Sushi
+  <li>4 slices of cheese
   <li>Cheese and crackers
   <li>Cheese soup
   <li>Nacho Cheese French Fries
