Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <ul>
   <li>2 slices of bread
   <li>4 slices of cheese
-  <li>Cheese and crackers
+  <li>1 tbsp of butter
   <li>Cheese soup
   <li>Nacho Cheese French Fries
 </ul>
