--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
   <li>2 slices of bread
   <li>4 slices of cheese
   <li>1 tbsp of butter
+    <ul>
+      <li>Butter</li>
+      <li>Margarine</li>
+    </ul>
   <li>Cheese soup
   <li>Nacho Cheese French Fries
 </ul>
