--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 
-<h3>Top 5 Favorite Foods</h3>
+<h3>Ingredients</h3>
 <ul>
   <li>2 slices of bread
   <li>4 slices of cheese
@@ -14,9 +14,12 @@
       <li>Butter</li>
       <li>Margarine</li>
     </ul>
-  <li>Cheese soup
-  <li>Nacho Cheese French Fries
 </ul>
+
+<h3>Steps</h3>
+<ol>
+  <li></li>
+</ol>
 
 </body>
 </html>
