Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 <h3>Steps</h3>
 <ol>
   <li>Spread butter on bread and frying pan</li>
+  <li>Spread butter on bread and frying pan</li>
+  <li>Spread butter on bread and frying pan</li>
 </ol>
 
 </body>
