--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <h3>Steps</h3>
 <ol>
   <li>Spread butter on bread and frying pan</li>
-  <li>Spread butter on bread and frying pan</li>
+  <li>Place bread in frying pan and fry</li>
   <li>Spread butter on bread and frying pan</li>
 </ol>
 
